Fix CKEditor nested figure elements breaking image alignment
CKEditor was wrapping aligned images in nested <figure> tags:
<figure style="margin:30px 0;">
    <figure class="image image-style-align-left">

The outer figure's inline margin:0 left/right was overriding all
alignment CSS. Added CSS rule to reset margins on wrapper figures:

figure:has(> figure.image) { margin: 0 !important; }

This allows the inner figure's alignment classes to work correctly.

--- a/static/css/ckeditor_custom.css
+++ b/static/css/ckeditor_custom.css
@@ -68,6 +68,11 @@
     width: 100%;
 }
 
+/* Fix CKEditor nested figure issue - remove inline margin styles */
+figure:has(> figure.image) {
+    margin: 0 !important;
+}
+
 /* Default margins for non-aligned images */
 .ck-content figure.image:not(.image-style-align-left):not(.image-style-align-right):not(.image-style-side):not(.image-style-block-align-left):not(.image-style-block-align-right) {
     margin: 1em 0;
